@@ -1,3 +1,10 @@
+2011-12-17  Kaz Kojima  <kkojima@gcc.gnu.org>
+
+	* configure.tgt: Add sh* case.
+	* config/sh/target.h: New file.
+	* config/sh/sjlj.S: New file.
+	* config/linux/sh/futex_bits.h: New file.
+
 2011-12-14  Richard Henderson  <rth@redhat.com>
 
 	* config/arm/hwcap.h, config/arm/hwcap.cc: New files.
